# PewPew

./: .clang-format  .gitignore  CMakeLists.txt
resources/: game_settings.json  root_graph.json
sources/: CMakeLists.txt  components.h  game_camera.cpp  game_camera.h  game_map.cpp  game_map.h  game_renderer.cpp  game_renderer.h  game_resources.cpp  game_resources.h  game_services.cpp  game_services.h  game_statistics.cpp  game_statistics.h  main.cpp  pch.h  physics_world.cpp  physics_world.h
sources/components/: CMakeLists.txt  core_components.h  physics_components.h  sfml_components.h
sources/debug_ui/: CMakeLists.txt
sources/debug_ui/core/: CMakeLists.txt  base_menu_widget.h  debug_ui_system.cpp  debug_ui_system.h  group_menu_widget.h  imconfig_pewpew.h  menu_root_widget.cpp  menu_root_widget.h  menu_root_widget.hpp
sources/debug_ui/menu/: CMakeLists.txt  summary_widget.cpp  summary_widget.h
sources/resources/: CMakeLists.txt  resource_adapter.cpp  resource_adapter.h  resource_context.cpp  resource_context.h  resource_context.hpp  resource_error.cpp  resource_error.h  resource_id.cpp  resource_id.h  resource_pch.h  resource_system.cpp  resource_system.h  resource_url.cpp  resource_url.h
sources/tests/: CMakeLists.txt  resources.cpp
sources/utils/: CMakeLists.txt  sample_counter.cpp  sample_counter.h  std_headers.h
